Bug 270174 - Can't adjust vertical size of window; no scrolling, can't see all partitions in display.
Summary: Can't adjust vertical size of window; no scrolling, can't see all partitions ...
Status: RESOLVED FIXED
Alias: None
Product: filelight
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Martin Sandsmark
URL:
Keywords:
: 273228 289266 292761 305695 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-04-05 19:59 UTC by LewRockwellFAN
Modified: 2012-09-02 02:42 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.0
Sentry Crash Report:


Attachments
Add scrollbar support to the filelight kpart. (1.43 KB, patch)
2011-09-24 16:46 UTC, Espen Sandøy Hustad
Details

Note You need to log in before you can comment on or make changes to this bug.
Description LewRockwellFAN 2011-04-05 19:59:58 UTC
Version:           unspecified
OS:                Linux

application version: Version 1.9rc3 (not in the drop down menu above. This is the version in the official repositories for the 64 bit Ubuntu 10.04 LTS. I probably installed it with Synaptic)

kde version: Sorry, I have no idea what to put there, how to find out, or if it applies to me. I have the Gnome version of Ubuntu 10.04 LTS, lucid, 64 bit flavor but I have installed a few KDE aps, like k3b for instanse.

software distribution method; I hope I selected the right one. Most of my software has been installed through Synaptic. I haven't compiled anything myself.

I can't adjust vertical size of the window; no matter how wide I make it all my partitions are displayed in 2 columns and the display runs off the screen at the bottom. There is no scroll bar and my scroll wheel on my trackball does not elicit any response. When positioning the pointer correctly I do get the "barred arrow" that indicates I can grab the border at the top and adjust vertical size by when I move it down the border does not follow. The bottom window border is off the screen so I can't grab that.

Reproducible: Always

Steps to Reproduce:
invoke firelight



OS: Linux (x86_64) release 2.6.32-30-generic
Compiler: cc
Comment 1 LewRockwellFAN 2011-04-05 20:13:45 UTC
Forgot to mention that when I click the box that should toggle between a maximized window and some smaller size almost nothing happens, just a slight change in the horizontal dimension, less than a letter width I'd say, a barely noticeable twitch. Invoking Filelight with gksudo doesn't seem to make any difference.
Comment 2 Christoph Feck 2011-07-11 02:08:20 UTC
*** Bug 273228 has been marked as a duplicate of this bug. ***
Comment 3 Espen Sandøy Hustad 2011-09-24 16:46:55 UTC
Created attachment 63927 [details]
Add scrollbar support to the filelight kpart.

The following patch adds scrollbar support to the filelight kpart. No scrollbars are shown if the window is big enough.
Comment 4 Christoph Feck 2011-12-19 01:43:25 UTC
*** Bug 289266 has been marked as a duplicate of this bug. ***
Comment 5 Martin Sandsmark 2012-01-05 22:04:10 UTC
Git commit 82b785d9e69f205f2413af25fa75e3c08394886e by Martin T. H. Sandsmark.
Committed on 05/01/2012 at 23:03.
Pushed by sandsmark into branch 'master'.

Make the main filelight widget a QScrollArea.

>From Espen Hustad <espen@ehustad.com>:
    Add scrollbar support to the filelight kpart.

    The following patch adds scrollbar support to the filelight kpart.
    No scrollbars are shown if the window is big enough.

M  +14   -7    src/part/part.cpp

http://commits.kde.org/filelight/82b785d9e69f205f2413af25fa75e3c08394886e
Comment 6 Christoph Feck 2012-01-29 17:24:17 UTC
*** Bug 292761 has been marked as a duplicate of this bug. ***
Comment 7 dE 2012-05-09 11:39:52 UTC
Will I see these commits in 4.8.2? I compiled form subversion, but it still doesn't work out.
Comment 8 Christoph Feck 2012-05-09 22:31:29 UTC
The commit went to the master branch.
Comment 9 Christoph Feck 2012-08-24 10:16:23 UTC
*** Bug 305695 has been marked as a duplicate of this bug. ***
Comment 10 dE 2012-08-28 15:01:11 UTC
Exactly which version will I find this to be fixed?
Comment 11 Christoph Feck 2012-08-28 20:53:57 UTC
What does the "Version Fixed In" field on this page say?
Comment 12 afc 2012-08-29 04:01:17 UTC
On the page that the link you sent me directed me to it said "4.9.0", where my version is:版本 1.11
使用 KDE 開發平台 4.8.4 (4.8.4)  [developed platform 4.8.4]
Unfortunately, Synaptic Software Manager only has the 4.8.4 
Andrew
--- On Wed, 8/29/12, Christoph Feck <christoph@maxiom.de> wrote:

From: Christoph Feck <christoph@maxiom.de>
Subject: [Bug 270174] Can't adjust vertical size of window; no scrolling, can't see all partitions in display.
To: afc888ny@yahoo.com
Date: Wednesday, August 29, 2012, 5:53 AM

https://bugs.kde.org/show_bug.cgi?id=270174

--- Comment #11 from Christoph Feck <christoph@maxiom.de> ---
What does the "Version Fixed In" field on this page say?
Comment 13 dE 2012-09-02 02:42:46 UTC
(In reply to comment #11)
> What does the "Version Fixed In" field on this page say?


Oh. Sorry.