Make the main filelight widget a QScrollArea.

From Espen Hustad <espen@ehustad.com>:
    Add scrollbar support to the filelight kpart.

    The following patch adds scrollbar support to the filelight kpart.
    No scrollbars are shown if the window is big enough.

BUG: 270174